# AnalyticsMiniProduct

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  report.md  winequality-red.csv
backend/src/agent/: agent.py  llm.py  prompts.py  schemas.py
backend/src/agent/tools/: emit_artifact.py
backend/src/api/: api_schemas.py  dependencies.py  router.py  session_store.py
backend/src/core/: config.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisScreen.tsx  ArtifactRenderer.tsx  UploadScreen.tsx
frontend/src/components/artifacts/: ChartArtifact.tsx  CodeArtifact.tsx  ErrorArtifact.tsx  ImageArtifact.tsx  TableArtifact.tsx  TextArtifact.tsx  ThinkingArtifact.tsx
